k8s/rooms-service/rooms-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rooms-service-ingress
  namespace: trabalho-microsservico
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: rooms.trabalho.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rooms-service
                port:
                  number: 3002
